--- a/my_component/frontend/package.json
+++ b/my_component/frontend/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "pdfjs-dist": "^3.6.172",
     "streamlit-component-lib": "^1.1.1",
     "vue": "^3.0.0-0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
