--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-.idea/*
-**/frontend/node_modules/*
-**/frontend/.idea/*
+.idea
+streamlit_pdf_viewer/frontend/node_modules
+streamlit_pdf_viewer/frontend/.idea
