reduce number of python versions

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.8, 3.9, "3.10", 3.11 ]
-        node-version: [ 16, 18, 20 ]
+        python-version: [ 3.7, 3.8, 3.9 ]
+        node-version: [ 16, 18 ]
 
     steps:
       - uses: actions/checkout@v3
