--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 streamlit_pdf_viewer/frontend/node_modules
 streamlit_pdf_viewer/frontend/.idea
 venv
+dist
+/frontend/dist
+streamlit_pdf_viewer/frontend/package-lock.json
+streamlit_pdf_viewer.egg-info
