--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -46,6 +46,8 @@ jobs:
         run: | 
           pip install build 
           python -m build
-#    - name: Test with pytest
-#      run: |
-#        pytest
+      - name: Test with pytest
+        run: |
+          pip install  playwright pytest-playwright pytest
+          playwright install
+          pytest
