--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ dist
 streamlit_pdf_viewer/frontend/package-lock.json
 streamlit_pdf_viewer.egg-info
 streamlit_pdf_viewer/__pycache__/
+tests/__pycache__
