--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 # content of pytest.ini
 [pytest]
-addopts = --headed --browser firefox --browser chromium
-; addopts = --browser firefox --browser chromium
+; addopts = --headed --browser firefox --browser chromium
+addopts = --browser firefox --browser chromium
