--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -1,5 +1,5 @@
 [tool.bumpversion]
-current_version = "0.0.17"
+current_version = "0.0.18-dev0"
 commit = "true"
 tag = "true"
 tag_name = "v{new_version}"
