--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -9,26 +9,28 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [ 3.7, 3.8, 3.9, '3.10', '3.11', '3.12' ]
+        os: [ubuntu-latest]
+        python-version: [ 3.9, '3.10', '3.11', '3.12', '3.13' ]
         node-version: [ 18, 20 ]
+      fail-fast: false
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
       - uses: actions/setup-node@v4
         with:
           node-version: ${{matrix.node-version}}
       - name: build frontend
         run: |
           cd streamlit_pdf_viewer/frontend/
+          npm --version
           npm install
           npm run build
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Cleanup more disk space
         run: sudo rm -rf /usr/share/dotnet && sudo rm -rf /opt/ghc && sudo rm -rf "/usr/local/share/boost" && sudo rm -rf "$AGENT_TOOLSDIRECTORY"
       - name: Install python dependencies
@@ -44,6 +46,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Build Python backend
         run: | 
+          python --version
           pip install build 
           python -m build
       - name: Test with pytest
