--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -4,22 +4,22 @@ commit = "true"
 tag = "true"
 tag_name = "v{new_version}"
 
-parse = """(?x)
-    (?P<major>0|[1-9]\\d*)\\.
-    (?P<minor>0|[1-9]\\d*)\\.
-    (?P<patch>0|[1-9]\\d*)
-    (?:
-        -                             # dash separator for pre-release section
-        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
-        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
-    )?                                # pre-release section is optional
-"""
+#parse = """(?x)
+#    (?P<major>0|[1-9]\\d*)\\.
+#    (?P<minor>0|[1-9]\\d*)\\.
+#    (?P<patch>0|[1-9]\\d*)
+#    (?:
+#        -                             # dash separator for pre-release section
+#        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
+#        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
+#    )?                                # pre-release section is optional
+#"""
+#
+#serialize = [
+#    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
+#    "{major}.{minor}.{patch}",
+#]
 
-serialize = [
-    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
-    "{major}.{minor}.{patch}",
-]
-
-[tool.bumpversion.parts.pre_l]
-values = ["dev", "rc", "final"]
-optional_value = "final"
+#[tool.bumpversion.parts.pre_l]
+#values = ["dev", "rc", "final"]
+#optional_value = "final"
