scope versions of test libraries

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -48,7 +48,7 @@ jobs:
           python -m build
       - name: Test with pytest
         run: |          
-          pip install playwright pytest-playwright pytest pytest-github-actions-annotate-failures pytest-cov
+          pip install playwright==1.41.1 pytest-playwright==0.6.2 pytest==8.0.1 pytest-github-actions-annotate-failures pytest-cov==4.1.0
           playwright install chromium firefox
           pytest --cov=streamlit_pdf_viewer --cov-report xml
       - name: Coveralls
