--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -1,5 +1,5 @@
 [tool.bumpversion]
-current_version = "0.0.21-rc5"
+current_version = "0.0.21"
 commit = "true"
 tag = "true"
 tag_name = "v{new_version}"
