--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -9,11 +9,14 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.8, 3.9, '3.10', '3.11', '3.12', '3.13']
+        os: [ubuntu-latest, macos-latest]
+        python-version: [ '3.10', '3.11', '3.12', '3.13']
         node-version: [ 18, 20 ]
+
+    runs-on: ${{ matrix.os }}
+
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
