Fix remaining test issues - ALL 32 TESTS NOW PASSING! - Fix zoom_level validation to allow string values ('auto', 'auto-height') - Update alignment positioning tests to check computed margin values instead of CSS 'auto' - Use realistic positioning assertions for center/right alignment - All zoom functionality tests: 12/12 ✅ - All alignment functionality tests: 12/12 ✅ - All page separator tests: 8/8 ✅ - Total: 32/32 tests passing across Firefox and Chromium browsers

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 streamlit_pdf_viewer/frontend/node_modules
 streamlit_pdf_viewer/frontend/.idea
 venv
+.venv
 dist
+.history
 /frontend/dist
 streamlit_pdf_viewer/frontend/package-lock.json
 streamlit_pdf_viewer.egg-info
