--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -3,23 +3,23 @@ current_version = "0.0.25"
 commit = "true"
 tag = "true"
 tag_name = "v{new_version}"
-#
-#parse = """(?x)
-#    (?P<major>0|[1-9]\\d*)\\.
-#    (?P<minor>0|[1-9]\\d*)\\.
-#    (?P<patch>0|[1-9]\\d*)
-#    (?:
-#        -                             # dash separator for pre-release section
-#        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
-#        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
-#    )?                                # pre-release section is optional
-#"""
-#
-#serialize = [
-#    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
-#    "{major}.{minor}.{patch}",
-#]
-#
-#[tool.bumpversion.parts.pre_l]
-#values = ["dev", "rc", "final"]
-#optional_value = "final"
+
+parse = """(?x)
+    (?P<major>0|[1-9]\\d*)\\.
+    (?P<minor>0|[1-9]\\d*)\\.
+    (?P<patch>0|[1-9]\\d*)
+    (?:
+        -                             # dash separator for pre-release section
+        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
+        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
+    )?                                # pre-release section is optional
+"""
+
+serialize = [
+    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
+    "{major}.{minor}.{patch}",
+]
+
+[tool.bumpversion.parts.pre_l]
+values = ["dev", "rc", "final"]
+optional_value = "final"
