--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -33,11 +33,15 @@ jobs:
           npm install
           npm run build
       - name: Cleanup more disk space
-        run: sudo rm -rf /usr/share/dotnet && sudo rm -rf /opt/ghc && sudo rm -rf "/usr/local/share/boost" && sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+        run: | 
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc 
+          sudo rm -rf "/usr/local/share/boost" 
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade flake8 pytest==8.0.1 pycodestyle
+          pip install --upgrade flake8 pytest==8.3.5 pycodestyle
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with flake8
         run: |
@@ -51,7 +55,7 @@ jobs:
           python -m build
       - name: Test with pytest
         run: |          
-          pip install playwright==1.41.1 pytest-playwright==0.6.2 pytest==8.0.1 pytest-github-actions-annotate-failures pytest-cov==4.1.0
+          pip install playwright==1.52.0 pytest-playwright==0.7.0 pytest==8.3.5 pytest-github-actions-annotate-failures pytest-cov==6.2.1
           playwright install chromium firefox
           pytest --cov=streamlit_pdf_viewer --cov-report xml
       - name: Coveralls
