--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -9,11 +9,14 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.8, 3.9, '3.10', '3.11', '3.12', '3.13']
+        os: [ubuntu-latest]
+        python-version: [ '3.10', '3.11', '3.12', '3.13']
         node-version: [ 18, 20 ]
+
+    runs-on: ${{ matrix.os }}
+
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
@@ -30,11 +33,15 @@ jobs:
           npm install
           npm run build
       - name: Cleanup more disk space
-        run: sudo rm -rf /usr/share/dotnet && sudo rm -rf /opt/ghc && sudo rm -rf "/usr/local/share/boost" && sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+        run: | 
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc 
+          sudo rm -rf "/usr/local/share/boost" 
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade flake8 pytest==8.0.1 pycodestyle
+          pip install --upgrade flake8 pytest==8.3.5 pycodestyle
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with flake8
         run: |
@@ -48,8 +55,21 @@ jobs:
           python -m build
       - name: Test with pytest
         run: |          
-          pip install playwright==1.41.1 pytest-playwright==0.6.2 pytest==8.0.1 pytest-github-actions-annotate-failures pytest-cov==4.1.0
+          pip install playwright==1.52.0 pytest-playwright==0.7.0 pytest==8.3.5 pytest-github-actions-annotate-failures pytest-cov==6.2.1
           playwright install chromium firefox
           pytest --cov=streamlit_pdf_viewer --cov-report xml
       - name: Coveralls
         uses: coverallsapp/github-action@v2
+        with:
+          flag-name: run ${{ join(matrix.*, ' - ') }}
+          parallel: true
+
+  coveralls-finish-build:
+    needs: [ build ]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          parallel-finished: true
