--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,18 @@
 # content of pytest.ini
 [pytest]
 ; addopts = --headed --browser firefox --browser chromium
-addopts = --browser firefox --browser chromium
+addopts = --browser firefox --browser chromium --tb=short -v
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    accessibility: marks tests as accessibility tests
+    performance: marks tests as performance tests
+    edge_case: marks tests as edge case tests
+    error_handling: marks tests as error handling tests
+    multiple_instances: marks tests as multiple instances tests
+    interactive: marks tests as interactive feature tests
+    responsive: marks tests as responsive design tests
+    integration: marks tests as integration scenario tests
+    stress: marks tests as stress and load tests
+    compatibility: marks tests as browser compatibility tests
+    security: marks tests as security and validation tests
+    ui_interaction: marks tests as UI interaction tests
