--- a/streamlit_pdf_viewer/frontend/package.json
+++ b/streamlit_pdf_viewer/frontend/package.json
@@ -17,11 +17,14 @@
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
     "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.9",
     "@vue/cli-plugin-typescript": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.4.27",
     "@vue/eslint-config-typescript": "^13.0.0",
     "babel-eslint": "^10.1.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.28.0",
     "typescript": "^5.4.5",
     "vue-loader": "^17.4.2",
     "webpack": "^5.91.0"
